add logic to delete old entries when a new entry is made

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       </form>
 
       <div>
-        <ol id="numberOutput">
+        <ul id="numberOutput" type="none">
 
-        </ol>
+        </ul>
       </div>
     </div>
   </body>
