add logic to sequentially fade the first two items

--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
         </div>
       </form>
 
-      <div>
-        <ul id="numberOutput" type="none">
-
-        </ul>
+      <div id="robotOutput">
+        
       </div>
     </div>
   </body>
