add image of Mr. Robogear

--- a/index.html
+++ b/index.html
@@ -28,8 +28,15 @@
         </div>
       </form>
 
-      <div id="robotOutput">
-        
+      <div class="row">
+        <div class="col-lg-6">
+          <img src="img/robogear.png" alt="Mr. Robogear">
+        </div>
+        <div class="col-lg-6 textBox">
+          <div id="robotOutput">
+          
+          </div>
+        </div>
       </div>
     </div>
   </body>
