add text box formatting to make the robot speak

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <img src="img/robogear.png" alt="Mr. Robogear">
         </div>
         <div class="col-lg-6 textBox">
+          <img src='img/word-bubble.png'>
           <div id="robotOutput">
           
           </div>
