add text input for user name

--- a/index.html
+++ b/index.html
@@ -19,13 +19,23 @@
         <div class="form-group">  
           <div class="row">
             <div class='col-lg-5'>
-              <label for="numberInput">What number would you like Mr. Roboger to count to?</label>
+              <label for="numberInput">What number would you like Mr. Roboger to count to?</label> 
             </div>
             <div class="col-lg-4">
               <input name="numberInput" type="number" class="form-control">
             </div>
             <div class="col-lg-3">
               <button class="btn btn-success" type="submit">Count!</button>
+            </div>
+          </div>
+          <div class="row">
+            <div class="form-group">
+              <div class='col-lg-5'>
+                <label for="nameInput">What's your name, Sport?</label>
+              </div>
+              <div class='col-lg-7'>
+                <input name="nameInput" type="text" class="form-control">
+              </div>
             </div>
           </div>
         </div>
