add a checkbox to count backwards

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
               <div class='col-lg-5'>
                 <label for="nameInput">What's your name, Sport?</label>
               </div>
-              <div class='col-lg-7'>
+              <div class='col-lg-4'>
                 <input name="nameInput" type="text" class="form-control">
+              </div>
+              <div class='col-lg-3'>
+                <label><input id="backwards" type="checkbox">Count Backwards?</label>
               </div>
             </div>
           </div>
